update 1.1 - fixed horizontal scroll

--- a/home.css
+++ b/home.css
@@ -1,10 +1,10 @@
-/* 1. SAFETY DEFAULTS - Prevents Black Flash */
-html,
-body {
-    background-color: #FFDEF9;
-    /* Matches --bg-pink */
-    margin: 0;
-    padding: 0;
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 :root {
@@ -244,7 +244,7 @@ h6 {
     .cupcake-container {
         max-width: 220px;
         position: relative;
-        top: -80px;
+        top: -40px;
     }
 
     .brand p {
